#1 FIX : my profile missing margin-left

--- a/frontend/src/styles/AppHeader.scss
+++ b/frontend/src/styles/AppHeader.scss
@@ -20,6 +20,7 @@
     color: #ffffff;
     text-decoration: none;
     margin-right: 10px;
+    margin-left: 2%;
 
     img {
       width: 40px;
